--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ m3u = "1.0"
 log = "0.4"
 once_cell = { version = "1.17", optional = true }
 env_logger = "0.10"
+humansize = "2.1"
 
 [target.'cfg(windows)'.dependencies]
 itunes-com = { version = "0.2", features = ["wrappers"] }
