--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ windows = { version = "0.44.0", features = [
     "Win32_System_Power"
 ] }
 
+[target.'cfg(unix)'.dependencies]
+dbus = "0.9.7"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
 rand = "0.8"
