--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ windows = { version = "0.44.0", features = [
 [target.'cfg(unix)'.dependencies]
 dbus = "0.9.7"
 urlencoding = "2.1.3"
+nix = "0.29.0"
 
 [dev-dependencies]
 rand = "0.8"
